--- a/logo.css
+++ b/logo.css
@@ -5,8 +5,8 @@ body {
 }
 
 #c {
-	width: 100%;
+	max-width: 100%;
 	height: 100%;
-	background-color: red;
+	background: url("./images/i.webp");
 	background-size: cover;
 }
