--- a/logo.css
+++ b/logo.css
@@ -7,6 +7,6 @@ body {
 #c {
 	max-width: 100%;
 	height: 100%;
-	background: url("./images/i.webp");
+	background: url("./images/scare.webp");
 	background-size: cover;
 }
